Fix align trip list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,15 +54,6 @@
    background-repeat: no-repeat;
 }
 
-/* .trip_list {
-   &::after {
-      content: '';
-      width: 100%;
-      height: 0;
-      visibility: hidden;
-   }
-} */
-
 .day_list {
    &::after {
       content: '';
@@ -72,21 +63,7 @@
    }
 }
 
-/* @media (min-width: 1024px) { 
-   .trip_list {
-      &::after {
-         width: calc(33.33% - 1rem);
-      }
-   }
-} */
-
 @media (min-width: 1280px) { 
-   /* .trip_list {
-      &::after {
-         width: calc(50% - 1rem);
-      }
-   } */
-
    .day_list {
       &::after {
          width: calc(33.33% - 1rem);
